objects/cc_oo_BrandCodes__c.object
<CustomObject>
    <fields>
        <fullName>cc_oo_CodeName__c</fullName>
        <label>Code Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Description__c</fullName>
        <label>Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_LogoURL__c</fullName>
        <label>Brand Logo URL</label>
        <type>Url</type>
    </fields>
    <label>CC OO BrandCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>cc_oo_LogoURL__c</columns>
        <columns>cc_oo_CodeName__c</columns>
        <columns>cc_oo_Description__c</columns>
        <columns>cc_oo_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC OO BrandCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>